--- a/src/views/access/logout.phtml
+++ b/src/views/access/logout.phtml
@@ -16,42 +16,10 @@
                  class="img-responsive" style="opacity: .8;width: 50px">
         </div>
         <div class="card-body">
-            <p class="login-box-msg">Regístrese para iniciar su sesión</p>
-
-            <form action="/login" method="post">
-                <div class="input-group mb-3">
-                    <input type="text" name="identificacion" class="form-control" placeholder="Identificación">
-                    <div class="input-group-append">
-                        <div class="input-group-text">
-                            <span class="fas fa-id-card-alt"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="input-group mb-3">
-                    <input type="password" name="password" class="form-control" placeholder="Contraseña">
-                    <div class="input-gro   up-append">
-                        <div class="input-group-text">
-                            <span class="fas fa-lock"></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-7">
-                        <div class="icheck-primary">
-                            <input type="checkbox" id="remember" name="recuerdame">
-                            <label for="remember">
-                                Recuérdame
-                            </label>
-                        </div>
-                    </div>
-                    <!-- /.col -->
-                    <div class="col-5">
-                        <button type="submit" class="btn btn-primary btn-block">Registrarse</button>
-                    </div>
-                    <!-- /.col -->
-                </div>
-            </form>
-
+            <p class="login-box-msg text-danger">Usuario o Contraña incorrectos</p>
+    
+            <?
+            require __DIR__ . '/form/login.phtml' ?>
 
             <p class="mb-1">
                 <a href="forgot-password">Olvidé mi contraseña</a>
