Configuración de inicio de sesion

--- a/src/views/access/aside.phtml
+++ b/src/views/access/aside.phtml
@@ -60,11 +60,11 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a href="/logout" class="nav-link">
                         <i class="nav-icon fas fa-th"></i>
                         <p>
-                            Simple Link
-                            <span class="right badge badge-danger">New</span>
+                            Cerrar Sesión
+                            <span class="right badge badge-danger">OFF</span>
                         </p>
                     </a>
                 </li>
