--- a/src/views/administrador/aside.phtml
+++ b/src/views/administrador/aside.phtml
@@ -38,9 +38,9 @@
                      with font-awesome or any other icon font library -->
                 <li class="nav-item menu-open">
                     <a href="#" class="nav-link active">
-                        <i class="nav-icon fas fa-tachometer-alt"></i>
+                        <i class="nav-icon fas fa-users"></i>
                         <p>
-                            Starter Pages
+                            Usuarios
                             <i class="right fas fa-angle-left"></i>
                         </p>
                     </a>
@@ -58,15 +58,6 @@
                             </a>
                         </li>
                     </ul>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-th"></i>
-                        <p>
-                            Simple Link
-                            <span class="right badge badge-danger">New</span>
-                        </p>
-                    </a>
                 </li>
             </ul>
         </nav>
