--- a/src/views/administrador/index.phtml
+++ b/src/views/administrador/index.phtml
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>AdminLTE 3 | Starter</title>
+    <?
+    require __DIR__ . '/head/index.phtml' ?>
     <?
     require __DIR__ . '/../admin-lte/style.phtml'; ?>
 </head>
