--- a/src/views/administrador/header.phtml
+++ b/src/views/administrador/header.phtml
@@ -2,14 +2,22 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1 class="m-0">Inicio</h1>
+                <h1 class="m-0"><?= $this->title ?? null ?></h1>
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
-                    <li class="breadcrumb-item"><a href="#">Inicio</a></li>
-                    <li class="breadcrumb-item active">Inicio</li>
+                    <?
+                    foreach ($this->buttons as $button): ?>
+                        <li class="breadcrumb-item">
+                            <a type="button" class="btn <?= $button['class'] ?>">
+                                <?= $button['icon'] ?>
+                                <?= $button['name'] ?>
+                            </a>
+                        </li>
+                    <?
+                    endforeach; ?>
                 </ol>
             </div><!-- /.col -->
-        </div><!-- /.row -->
+        </div>
     </div><!-- /.container-fluid -->
 </div>
